# boxi

./: CMakeLists.txt
shaders/: fragment.glsl  vertex.glsl
src/: Shader.cpp  Shader.h  main.cpp
